adding table of contents, links, bibliography, and index

--- a/geographic/docs/notes/Makefile
+++ b/geographic/docs/notes/Makefile
@@ -1,3 +1,14 @@
-PhotogrammetryNotes.pdf: PhotogrammetryNotes.tex
-	pdflatex $<
+TITLE=PhotogrammetryNotes
 
+$(TITLE).pdf: $(TITLE).tex
+	pdflatex  $<
+	pdflatex  $<
+	makeindex $(TITLE)
+	pdflatex  $<
+	bibtex    $(TITLE)
+	pdflatex  $<
+	pdflatex  $<
+
+
+clean:
+	rm *.idx *.log *.pdf *.aux *.toc *.ilg *.ind
