adding orthorectification source

--- a/geographic/Makefile
+++ b/geographic/Makefile
@@ -76,8 +76,8 @@ TEST = $(TEST_INCLUDE) $(TEST_SOURCES)
 #
 HEADERS = src/core/*.h src/dem/*.h src/extensions/*.h src/image/*.h src/utilities/*.h
 
-OBJECTS       = build/string_utils.o       build/GS2_Header.o        build/CoordinateLatLon.o        build/CoordinateBase.o        build/TACID.o		  build/DTEDUtils.o    	  build/DEM.o 	     build/SRTMHeader.o       build/DTEDHeader.o	 	  build/NITFHeader.o       build/DEMHeader.o       build/ImageHeader.o	     build/GeoHeader.o 	     build/PixelType.o	      build/OpenCVUtils.o	    build/GDAL_Data.o	    build/GeoImage.o       build/GDAL2OpenCV.o	
-OBJECTS_DEBUG = build/string_utils_DEBUG.o build/GS2_Header_DEBUG.o  build/CoordinateLatLon_DEBUG.o  build/CoordinateBase_DEBUG.o  build/TACID_DEBUG.o build/DTEDUtils_DEBUG.o build/DEM_DEBUG.o  build/SRTMHeader_DEBUG.o build/DTEDHeader_DEBUG.o build/NITFHeader_DEBUG.o build/DEMHeader_DEBUG.o build/ImageHeader_DEBUG.o build/GeoHeader_DEBUG.o build/PixelType_DEBUG.o  build/OpenCVUtils_DEBUG.o build/GDAL_Data_DEBUG.o build/GeoImage_DEBUG.o build/GDAL2OpenCV_DEBUG.o
+OBJECTS       = build/Orthorectify.o       build/string_utils.o       build/GS2_Header.o        build/CoordinateLatLon.o        build/CoordinateBase.o        build/TACID.o		  build/DTEDUtils.o    	  build/DEM.o 	     build/SRTMHeader.o       build/DTEDHeader.o	 	  build/NITFHeader.o       build/DEMHeader.o       build/ImageHeader.o	     build/GeoHeader.o 	     build/PixelType.o	      build/OpenCVUtils.o	    build/GDAL_Data.o	    build/GeoImage.o       build/GDAL2OpenCV.o	
+OBJECTS_DEBUG = build/Orthorectify_DEBUG.o build/string_utils_DEBUG.o build/GS2_Header_DEBUG.o  build/CoordinateLatLon_DEBUG.o  build/CoordinateBase_DEBUG.o  build/TACID_DEBUG.o build/DTEDUtils_DEBUG.o build/DEM_DEBUG.o  build/SRTMHeader_DEBUG.o build/DTEDHeader_DEBUG.o build/NITFHeader_DEBUG.o build/DEMHeader_DEBUG.o build/ImageHeader_DEBUG.o build/GeoHeader_DEBUG.o build/PixelType_DEBUG.o  build/OpenCVUtils_DEBUG.o build/GDAL_Data_DEBUG.o build/GeoImage_DEBUG.o build/GDAL2OpenCV_DEBUG.o
 
 GEO_INCLUDE = -Isrc/coordinates -Isrc/core -Isrc/dem -Isrc/image -Isrc/extensions -Isrc/utilities
 
@@ -274,6 +274,26 @@ build/string_utils.o:       src/utilities/string_utils.cpp $(HEADERS)
 
 build/string_utils_DEBUG.o: src/utilities/string_utils.cpp $(HEADERS)
 	g++ -fPIC $< -c -o $@ $(BOOST_INCLUDE) $(OPENCV_INCLUDE) $(GDAL_INCLUDE) $(DFLAGS)
+
+# Ortho Rectify
+build/Orthorectify.o:       src/ortho/Orthorectify.cpp $(HEADERS)
+	g++ -fPIC $< -c -o $@ $(OFLAGS) $(GDAL_INCLUDE) $(GEO_INCLUDE)
+
+build/Orthorectify_DEBUG.o: src/ortho/Orthorectify.cpp $(HEADERS)
+	g++ -fPIC $< -c -o $@ $(DFLAGS) $(GDAL_INCLUDE) $(GEO_INCLUDE)
+
+
+###################################################################
+#				   		      Geo Rectify						  #
+###################################################################
+RECTIFY_OBJ=$(BUILD)/geo_rectify.o
+
+$(BIN)/geo_rectify:  $(RECTIFY_OBJ)
+	g++ $(RECTIFY_OBJ) -o $@ 
+
+$(BUILD)/geo_rectify.o: src/tools/geo_rectify.cpp $(RECTIFY_HDR)
+	g++ $< -c -o $@ $(GEOIMAGE_INCLUDE)
+
 
 ###################################################################
 #				   		      Geo Viewer						  #
