--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -8,20 +8,22 @@
 #    1. BUILD    - Build a test image
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
-RUN_TYPE=FULL
+RUN_TYPE=RECTIFY
 
+#  Name of the image to evaluate if not using the BUILD module
 Image_Name=data/modified_image.jpg
+
 
 ###################################################
 #               GLOBAL PARAMETERS                 #
 ###################################################
 
-
 # Camera Intrinsics
 Focal_Length=1.0
 
+# Camera Rotation Parameters
 Camera_Rotation_Angle=45
-Camera_Rotation_Axis=1, 1, 0
+Camera_Rotation_Axis=1, 0, 0
 
 # Camera Scene Extrinsics
 Camera_Position= 0.0, 0.0, 1000.0
@@ -34,4 +36,6 @@ Camera_Position= 0.0, 0.0, 1000.0
 BUILD_IMG_ROWS=1000
 BUILD_IMG_COLS=1000
 
+# Build image type
 BUILD_IMG_TYPE=CV_8UC1
+
