fixed a vector class issue so the code will work on Beaus machine

--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -8,7 +8,7 @@
 #    1. BUILD    - Build a test image
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
-RUN_TYPE=RECTIFY
+RUN_TYPE=FULL
 
 #  Name of the image to evaluate if not using the BUILD module
 Image_Name=data/modified_image.jpg
