--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -11,7 +11,7 @@
 RUN_TYPE=FULL
 
 #  Name of the image to evaluate if not using the BUILD module
-Image_Name=data/modified_image.jpg
+Image_Name=data/img.jpg
 
 
 ###################################################
