Creation of perspective images is working

--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -22,7 +22,7 @@ Image_Name=data/img.jpg
 Focal_Length=1.0
 
 # Camera Rotation Parameters
-Camera_Rotation_Angle=25
+Camera_Rotation_Angle=0
 Camera_Rotation_Axis=1, 0, 0
 
 # Camera Scene Extrinsics
@@ -40,10 +40,10 @@ BUILD_IMG_COLS=1000
 BUILD_IMG_TYPE=CV_8UC1
 
 # Z Buffering
-ZBUFFER_ENABLED=False
+ZBUFFER_ENABLED=True
 
 ###################################################
 #               RECITY  PARAMETERS                #
 ###################################################
-RECTIFY_PERFORM_PERSPECTIVE_TO_PARALLEL=False
+RECTIFY_PERFORM_PERSPECTIVE_TO_PARALLEL=True
 
