--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -8,11 +8,11 @@
 #    1. BUILD    - Build a test image
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
-RUN_TYPE=FULL
+RUN_TYPE=RECTIFY
 
 #  Name of the image to evaluate if not using the BUILD module
-Image_Name=data/img.jpg
-
+Image_Name=data/modified_image.jpg
+DEM_Name=data/dem.jpg
 
 ###################################################
 #               GLOBAL PARAMETERS                 #
