omg. i am inches away from solving the perspective to parallel transformation.

--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -47,3 +47,4 @@ ZBUFFER_ENABLED=True
 ###################################################
 RECTIFY_PERFORM_PERSPECTIVE_TO_PARALLEL=True
 
+RECTIFY_OUTPUT_TYPE=CV_8UC3
