first demo actually worked, then failed on rotation

--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -22,7 +22,7 @@ DEM_Name=data/dem.jpg
 Focal_Length=1.0
 
 # Camera Rotation Parameters
-Camera_Rotation_Angle=0
+Camera_Rotation_Angle=45
 Camera_Rotation_Axis=1, 0, 0
 
 # Camera Scene Extrinsics
