fixed some annoyances. testing full pipeline

--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -12,7 +12,7 @@ RUN_TYPE=RECTIFY
 
 #  Name of the image to evaluate if not using the BUILD module
 Image_Name=data/modified_image.jpg
-DEM_Name=data/dem.jpg
+DEM_Name=data/dem.png
 
 ###################################################
 #               GLOBAL PARAMETERS                 #
@@ -23,7 +23,7 @@ Focal_Length=1.0
 
 # Camera Rotation Parameters
 Camera_Rotation_Angle=45
-Camera_Rotation_Axis=1, 0, 0
+Camera_Rotation_Axis=1, 1, 1
 
 # Camera Scene Extrinsics
 Camera_Position= 0.0, 0.0, 1000.0
@@ -37,13 +37,13 @@ BUILD_IMG_ROWS=1000
 BUILD_IMG_COLS=1000
 
 # Build image type
-BUILD_IMG_TYPE=CV_8UC1
+BUILD_IMG_TYPE=CV_8UC3
 
 # Z Buffering
 ZBUFFER_ENABLED=True
 
 ###################################################
-#               RECITY  PARAMETERS                #
+#               RECITIFY  PARAMETERS              #
 ###################################################
 RECTIFY_PERFORM_PERSPECTIVE_TO_PARALLEL=True
 
