adding more comments

--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -1,5 +1,3 @@
-
-
 #  RUN TYPE
 #  -  Tells the program whether to generate an image given the current
 #     configuration or if to orthorectify it.
@@ -12,6 +10,14 @@ RUN_TYPE=RECTIFY
 
 #  Name of the image to evaluate if not using the BUILD module
 Image_Name=data/modified_image.jpg
+
+#  DEM Mode
+#  
+#  FILE=load dem information from a specific file
+#  DTED=load dem information from DTED, use DEM_Name as root
+DEM_Mode=FILE
+
+#  Name of the DEM module if not using DTED
 DEM_Name=data/dem.png
 
 ###################################################
