--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -1,3 +1,11 @@
+
+###################################################
+#                  RUN PARAMETERS                 #
+###################################################
+#  UI Interaction
+#  - Tells the program whether to run with 
+
+
 #  RUN TYPE
 #  -  Tells the program whether to generate an image given the current
 #     configuration or if to orthorectify it.
@@ -6,10 +14,12 @@
 #    1. BUILD    - Build a test image
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
-RUN_TYPE=RECTIFY
+RUN_TYPE=BUILD
+
 
 #  Name of the image to evaluate if not using the BUILD module
 Image_Name=data/modified_image.jpg
+
 
 #  DEM Mode
 #  
@@ -17,8 +27,10 @@ Image_Name=data/modified_image.jpg
 #  DTED=load dem information from DTED, use DEM_Name as root
 DEM_Mode=FILE
 
+
 #  Name of the DEM module if not using DTED
 DEM_Name=data/dem.png
+
 
 ###################################################
 #               GLOBAL PARAMETERS                 #
