--- a/geographic/test/data/options.cfg
+++ b/geographic/test/data/options.cfg
@@ -2,8 +2,23 @@
 ###################################################
 #                  RUN PARAMETERS                 #
 ###################################################
-#  UI Interaction
-#  - Tells the program whether to run with 
+# Logger Configuration
+#
+# Available Options
+# 
+# MAJOR - Program Crashing or Corrupted Data Deficiencies
+# MINOR - Invalid data or other bad conditions
+# WARNING - Dangerous conditions which may cause problems later. 
+# INFO    - Information Note or Console State
+
+# Logfile Name
+LOG_LOGFILE_NAME=logfile.log
+
+# Logfile Configuration
+LOG_LOGFILE_CONFIGURATION= MAJOR, MINOR, WARNING, INFO
+
+# Console Output Configuration
+LOG_CONSOLE_CONFIGURATION= MAJOR, MINOR, WARNING, INFO
 
 
 #  RUN TYPE
