fixed some bugs in the GeoImage code and updated makefile

--- a/geographic/ortho_project/Makefile
+++ b/geographic/ortho_project/Makefile
@@ -74,6 +74,17 @@ HEADERS= $(CORE)/Configuration.hpp \
 		 $(CORE)/Logger.hpp
 
 
+# Create required directory structure
+orthoproject: build bin $(EXEC)
+
+build:
+	echo "Constructing build directory"
+	mkdir -p build
+
+bin: 
+	echo "Constructing bin directory"
+	mkdir -p bin
+
 ###############################
 #          Executable         #
 ###############################
