--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -29,24 +29,25 @@ LOG_CONSOLE_CONFIGURATION= MAJOR, MINOR, WARNING, INFO
 #    1. BUILD    - Build a test image
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
+#RUN_TYPE=BUILD
 RUN_TYPE=RECTIFY
 
 
 #  Name of the image to evaluate if not using the BUILD module
-#Image_Name=data/modified_image.jpg
-Image_Name=data/nitf/24FEB129Z0200700ZXGEO000GS0000004F482007.ntf
+Image_Name=data/modified_image.jpg
+#Image_Name=data/nitf/24FEB129Z0200700ZXGEO000GS0000004F482007.ntf
 
 
 #  DEM Mode
 #  
 #  FILE=load dem information from a specific file
 #  DTED=load dem information from DTED, use DEM_Name as root
-#DEM_Mode=FILE
-DEM_Mode=DTED
+DEM_Mode=FILE
+#DEM_Mode=DTED
 
 #  Name of the DEM module if not using DTED
-#DEM_Name=data/dem.png
-DEM_Name=data/dted
+DEM_Name=data/dem.png
+#DEM_Name=data/dted
 
 ###################################################
 #               GLOBAL PARAMETERS                 #
@@ -57,10 +58,10 @@ Focal_Length=1.0
 
 # Camera Rotation Parameters
 Camera_Rotation_Angle=0
-Camera_Rotation_Axis=0, 1, 0
+Camera_Rotation_Axis=1, 0, 0
 
 # Camera Scene Extrinsics
-Camera_Position= 0.0, 0.0, 8000.0
+Camera_Position= 0.0, 0.0, 1000.0
 
 ###################################################
 #               BUILD  PARAMETERS                 #
@@ -79,7 +80,7 @@ ZBUFFER_ENABLED=True
 ###################################################
 #               RECITIFY  PARAMETERS              #
 ###################################################
-RECTIFY_PERFORM_PERSPECTIVE_TO_PARALLEL=False
+RECTIFY_PERFORM_PERSPECTIVE_TO_PARALLEL=True
 
 RECTIFY_OUTPUT_TYPE=CV_8UC3
 
@@ -87,6 +88,6 @@ RECTIFY_OUTPUT_TYPE=CV_8UC3
 RECTIFY_OUTPUT_FILENAME=data/corrected.jpg
 
 #  Flag to determine if we are using Geographic Imagery
-RECTIFY_IS_GEOIMAGE=True
+RECTIFY_IS_GEOIMAGE=False
 
 
