--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -29,8 +29,8 @@ LOG_CONSOLE_CONFIGURATION= MAJOR, MINOR, WARNING, INFO
 #    1. BUILD    - Build a test image
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
-#RUN_TYPE=BUILD
-RUN_TYPE=RECTIFY
+RUN_TYPE=BUILD
+#RUN_TYPE=RECTIFY
 
 
 #  Name of the image to evaluate if not using the BUILD module
@@ -57,7 +57,7 @@ DEM_Name=data/dem.png
 Focal_Length=1.0
 
 # Camera Rotation Parameters
-Camera_Rotation_Angle=0
+Camera_Rotation_Angle=45
 Camera_Rotation_Axis=1, 0, 0
 
 # Camera Scene Extrinsics
