geo imagery support will at least not seg fault in rectify mode anymore. size issues are resolved.

--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -54,10 +54,14 @@ DEM_Name=data/dem.png
 ###################################################
 
 # Camera Intrinsics
-Focal_Length=1.0
+Focal_Length=0.10
+
+# Camera Plane Dimensions
+Camera_Plane_Width= 0.1
+Camera_Plane_Height=0.1
 
 # Camera Rotation Parameters
-Camera_Rotation_Angle=45
+Camera_Rotation_Angle=0
 Camera_Rotation_Axis=1, 0, 0
 
 # Camera Scene Extrinsics
@@ -80,7 +84,7 @@ ZBUFFER_ENABLED=True
 ###################################################
 #               RECITIFY  PARAMETERS              #
 ###################################################
-RECTIFY_PERFORM_PERSPECTIVE_TO_PARALLEL=True
+RECTIFY_PERFORM_PERSPECTIVE_TO_PARALLEL=False
 
 RECTIFY_OUTPUT_TYPE=CV_8UC3
 
@@ -89,5 +93,4 @@ RECTIFY_OUTPUT_FILENAME=data/corrected.jpg
 
 #  Flag to determine if we are using Geographic Imagery
 RECTIFY_IS_GEOIMAGE=False
-
 
