--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -30,42 +30,65 @@ LOG_CONSOLE_CONFIGURATION= MAJOR, MINOR, WARNING, INFO
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
 RUN_TYPE=BUILD
-#RUN_TYPE=RECTIFY
 
 
-#  Name of the image to evaluate if not using the BUILD module
-Image_Name=data/modified_image.jpg
-#Image_Name=data/nitf/24FEB129Z0200700ZXGEO000GS0000004F482007.ntf
+#  Name of the image to evaluate
+#   
+#  NOTE:  in RUN_TYPE=BUILD,   this will be the image name for the created file
+#         in RUN_TYPE=RECTIFY, this is the file which will be loaded.  Note: This must exist in the filesystem
+#         in RUN_TYPE=FULL,    this will act according to RUN_TYPE=BUILD
+IMAGE_FILENAME=data/modified_image.jpg
+
 
 
 #  DEM Mode
 #  
-#  FILE=load dem information from a specific file
-#  DTED=load dem information from DTED, use DEM_Name as root
-DEM_Mode=FILE
-#DEM_Mode=DTED
+#  NOTE: 
+#         in RUN_TYPE=BUILD: Option not used, assumed to be a file name
+#         in RUN_TYPE=RECTIFY: Option is required, will determine action for DEM_NAME
+#         in RUN_TYPE=FULL: Option will model RUN_TYPE=BUILD
+#
+#  - Supported Options
+#     FILE = load dem information from a specific file.  Use DEM_NAME as the file
+#     DTED = load dem information from DTED, use DEM_NAME as the root directory
+DEM_MODE=FILE
 
-#  Name of the DEM module if not using DTED
-DEM_Name=data/dem.png
-#DEM_Name=data/dted
+#  DEM_NAME
+#
+#  NOTE:
+#         in RUN_TYPE=BUILD:   This will be the file used to save the DEM image
+#         in RUN_TYPE=RECTIFY: This is the base of the dem directory or the dem file. This must exist accordingly
+#         in RUN_TYPE=FULL:    This will follow the rules of RUN_TYPE=BUILD
+DEM_NAME=data/dem.png
+
 
 ###################################################
-#               GLOBAL PARAMETERS                 #
+#               CAMERA PARAMETERS                 #
 ###################################################
+
+# USE_GEOIMAGE_CAMERA_PARAMS
+#
+#  Flag to determine if we are using Geographic Imagery for camera parameters
+#  NOTE: only used when RUN_TYPE=RECTIFY
+#
+#  - True: Use the image defined by IMAGE_FILENAME tag for the camera info
+#  - False: Use this config file's data
+#
+USE_GEOIMAGE_CAMERA_PARAMS=False
 
 # Camera Intrinsics
-Focal_Length=0.10
+CAMERA_FOCAL_LENGTH=0.10
 
 # Camera Plane Dimensions
-Camera_Plane_Width= 0.1
-Camera_Plane_Height=0.1
+CAMERA_PLANE_WIDTH= 0.1
+CAMERA_PLANE_HEIGHT=0.1
 
 # Camera Rotation Parameters
-Camera_Rotation_Angle=0
-Camera_Rotation_Axis=1, 0, 0
+CAMERA_ROTATION_ANGLE=45
+CAMERA_ROTATION_AXIS=1, 0, 0
 
 # Camera Scene Extrinsics
-Camera_Position= 0.0, 0.0, 1000.0
+CAMERA_WORLD_POSITION= 0.0, 0.0, 1000.0
 
 ###################################################
 #               BUILD  PARAMETERS                 #
@@ -91,6 +114,4 @@ RECTIFY_OUTPUT_TYPE=CV_8UC3
 # Name of the rectified image
 RECTIFY_OUTPUT_FILENAME=data/corrected.jpg
 
-#  Flag to determine if we are using Geographic Imagery
-RECTIFY_IS_GEOIMAGE=False
 
