adding stuff to configuration file for the rectify type

--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -95,21 +95,22 @@ CAMERA_WORLD_POSITION= 0.0, 0.0, 1000.0
 ###################################################
 
 # Size of expected image
-BUILD_IMG_ROWS=1000
-BUILD_IMG_COLS=1000
+BUILD_IMAGE_ROWS=1000
+BUILD_IMAGE_COLS=1000
 
 # Build image type
-BUILD_IMG_TYPE=CV_8UC1
+BUILD_IMAGE_TYPE=CV_8UC1
 
 # Z Buffering
-ZBUFFER_ENABLED=True
+BUILD_WITH_3D=True
 
 ###################################################
 #               RECITIFY  PARAMETERS              #
 ###################################################
 RECTIFY_PERFORM_PERSPECTIVE_TO_PARALLEL=False
 
-RECTIFY_OUTPUT_TYPE=CV_8UC3
+
+RECTIFY_OUTPUT_IMAGE_TYPE=CV_8UC3
 
 # Name of the rectified image
 RECTIFY_OUTPUT_FILENAME=data/corrected.jpg
