adding gee conditioning project

--- a/geographic/ortho_project/Makefile
+++ b/geographic/ortho_project/Makefile
@@ -152,6 +152,12 @@ $(BUILD)/OrthoExceptions.o: $(CORE)/OrthoExceptions.cpp $(HEADERS)
 
 
 ####################################
+#       UNIT TEST FRAMEWORK        #
+####################################
+check:
+	make -f $(SRC)/Makefile_unit_test
+
+####################################
 #          DOCUMENTATION           #
 ####################################
 docs:
