Adding core unit testing functionality. Need to start creating actual modules

--- a/geographic/ortho_project/Makefile
+++ b/geographic/ortho_project/Makefile
@@ -155,7 +155,7 @@ $(BUILD)/OrthoExceptions.o: $(CORE)/OrthoExceptions.cpp $(HEADERS)
 #       UNIT TEST FRAMEWORK        #
 ####################################
 check:
-	make -f $(SRC)/Makefile_unit_test
+	make -f $(SRC)/Makefile check
 
 ####################################
 #          DOCUMENTATION           #
