--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -29,7 +29,7 @@ LOG_CONSOLE_CONFIGURATION= MAJOR, MINOR, WARNING, INFO
 #    1. BUILD    - Build a test image
 #    2. RECTIFY  - Rectify the input image
 #    3. FULL     - Build a test image, then rectify it.
-RUN_TYPE=BUILD
+RUN_TYPE=RECTIFY
 
 
 #  Name of the image to evaluate
