got the baseline bundle process to work.  Still have much work to do.

--- a/geographic/ortho_project/data/options.cfg
+++ b/geographic/ortho_project/data/options.cfg
@@ -85,7 +85,7 @@ CAMERA_PLANE_WIDTH= 1.0
 CAMERA_PLANE_HEIGHT=1.0
 
 # Camera Rotation Parameters
-CAMERA_ROTATION_ANGLE=0
+CAMERA_ROTATION_ANGLE=45
 CAMERA_ROTATION_AXIS=1, 0, 0
 
 # Camera Scene Extrinsics
